# big_integer_optimized

./: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing  big_integer_testing.cpp  long_arithmetic.cpp  utils.h  vector_digit.cpp  vector_digit.h  vector_digit_testing.cpp
